worked on assignment 12

--- a/views/chickenDish.pug
+++ b/views/chickenDish.pug
@@ -6,7 +6,7 @@ block content
     div.container-fluid 
         div.row 
             each item, index in results
-                div.col-sm-2(onclick=`buy(${index})`) Dish: #{item["dishName"]} <br> Price: #{item["dishPrice"]} <br> Main Ingredient: #{item["mainIngredient"]}
+                div.col-sm-2(onclick=`buy(${index})`) Dish: #{item["dishName"]} <br> Price: #{item["price"]} <br> Main Ingredient: #{item["mainIngredient"]}
     
 
     script. 
