--- a/views/chickenDish.pug
+++ b/views/chickenDish.pug
@@ -1,13 +1,54 @@
 extends layout 
 
 block content 
-    h1=title 
+    style.
+        body{
+            //- background:url('https://wallpaperaccess.com/full/4323663.jpg');
+            background-image:  linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),url('https://wallpaperaccess.com/full/4323663.jpg');
+            background-size:cover;
+            height:100vh;
+            background-repeat:no-repeat;
+        }
+        .container-fluid{
+            color:white;
+            width:0 auto;
+            text-shadow: 5px 5px 10px grey;
+
+        }
+        h1{
+            text-align:center;
+            color:white;
+            text-shadow: 5px 5px 10px black;
+        }
+        a{
+            margin:10px;
+        }
+        p{
+            font-size:20px;
+        }
+        .row{
+            display:flex;
+            justify-content:center;
+        }
+        .col-sm-2 {
+            text-align:center;
+            display:flex;
+            justify-content:center;
+        }
     - let results = dishResults
-    div.container-fluid 
-        div.row 
-            each item, index in results
-                div.col-sm-2(onclick=`buy(${index})`) Dish: #{item["dishName"]} <br> Price: #{item["price"]} <br> Main Ingredient: #{item["mainIngredient"]}
-    
+        h1=title 
+         div.container-fluid 
+            div.row 
+                each item, index in results
+                    div.col-sm-2(onclick=`buy(${index})`)
+                        div.test
+                            p #{item["dishName"]}  
+                            a(href=`/chickenDish/detail/?id=${item['_id']}` type='button' class="btn btn-light") details
+                            br
+                            a(href=`/chickenDish/update/?id=${item['_id']}` type='button' class="btn btn-light") update
+                            br
+                            a(href=`/chickenDish/delete/?id=${item['_id']}` type='button' class="btn btn-light") delete
+        
 
     script. 
         function buy(index) {
