--- a/views/chickenDishUpdate.pug
+++ b/views/chickenDishUpdate.pug
@@ -2,7 +2,7 @@ extends layout
 block content
  h1= title
  if (toShow == null)
-    h2 No instance to delete
+    h2 No instance to update
  else
     - let chickenDishid = toShow._id
     - let dishName = toShow.dishName
