--- a/views/chickenDishUpdate.pug
+++ b/views/chickenDishUpdate.pug
@@ -34,10 +34,14 @@ block content
             }).then((resp) => {
                 return resp.json(); // or resp.text() or whatever the server sends
             }).then((body) => {
-                alert("Update succeded")
+                if(body.error)
+                    alert('save failed Please enter valid Data')
+                else
+                    alert("Save succeded")
         // TODO handle body
             }).catch((error) => {
         // TODO handle error
-                alert("Update failed " + error )
+                alert('save failed Please enter valid Data')
+
             });
         });
