--- a/views/index.pug
+++ b/views/index.pug
@@ -1,24 +1,11 @@
 extends layout
-
 block content
-  h1= title
-  p Welcome to #{title} by Chandrakanth Reddy Chinthakuntla
-
-  body
-    button(type="button", class="btn btn-secondary" onclick = "doBump()") Press Me
-    br
-    br
-    div#bump Bump the count
-    br
-    a(class="btn btn-info" href="chickenDish") Chicken Dishes
-
-    script.
-      let count = 0;
-      let bump = 1;
-      function doBump()
-      {
-        count += bump;
-        bump += 1;
-        document.getElementById("bump").innerHTML = "Count " + count + " Bump " + bump;
-      }
-     
+ if (!user)
+  a(href="/login") Login
+  br
+  a(href="/register") Register
+ if (user)
+  p You are currently logged in as #{user.username}
+  a(href="/chickenDish") Take me to chickenDish
+  br
+  a(href="/logout") Logout
